maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: ':' expected but ')' found.
	def isDirectionFree(dir) {
                               ^Escaper:33: error: identifier expected but '}' found.
}
^